[Gtk] atk_text_get_text_at_offset() sometimes fails to provide the correct line https://bugs.webkit.org/show_bug.cgi?id=72382

Reviewed by Martin Robinson.

Source/WebCore:

Do not add unnecesary blanks at the end of a line of text.

* accessibility/gtk/WebKitAccessibleInterfaceText.cpp:
(textForRenderer): Do not just append a '\n' at the end of a line
if the linebreak for that line was already considered.

Source/WebKit/gtk:

New unit test to ensure the right line is retrieved for the first
position of each line in a multiline preformatted portion of text.

* tests/testatk.c:
(testWebkitAtkGetTextAtOffsetWithPreformattedText): New unit test.
(main): Add the new unit test.

Canonical link: https://commits.webkit.org/94489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106545 268f45cc-cd09-0410-ab3c-d52691b4dbfc